# OpenAICpp

./: CMakeLists.txt  README.md
examples/chat/: CMakeLists.txt  main.cpp
include/openai/: chatcompletion.h  embedding.h  error.h  imagegeneration.h  networkrequest.h  openai.h  openai_export.h
src/: chatcompletion.cpp  embedding.cpp  imagegeneration.cpp  networkrequest.cpp  openai.cpp
